--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app">
+      <h1>OMG it's working!! Woohoo :D</h1>
       <header>MockApp Ver. Alpha</header>
       <initial-form @review-submitted="addReview"></initial-form><br>
       <header>MockApp Ver. Alpha</header>
