--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
       <initial-form v-else-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
 
+      <button @onclick="myClick()">DOG S</button>
+
       <!--
       <ground-survey></ground-survey><br>
       <lorem-ipsum></lorem-ipsum><br>
