--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <initial-form v-else-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
 
-      <button @onclick="myClick()">DOG S</button>
+      <button @onclick="requestOnClick()">DOG S</button>
 
       <!--
       <ground-survey></ground-survey><br>
