--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <subtraction></subtraction><br>
         <scwt></scwt><br>
       -->
-      <div class="p-3 mb-2 bg-secondary" id="demo-div">
-        <a id="start_demo" class="btn btn-lg btn-success py-1" href="#" role="button">Start the demo</a>
+      <div id="demo-div">
+        <a id="start_demo" role="button">Start the demo</a>
         
-        <h4 style="margin-top:0.75rem;">Orientation</h4>
+        <h4>Orientation</h4>
         <ul>
           <li>X-axis (&beta;): <span id="Orientation_b">0</span><span>&deg;</span></li>
           <li>Y-axis (&gamma;): <span id="Orientation_g">0</span><span>&deg;</span></li>
