Miniscule changes, for debugging and integrating for iOS motion sensors...

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <scwt></scwt><br>
       -->
       <div id="demo-div">
-        <a id="start_demo" role="button">Start the demo</a>
+        <button id="start_demo" href="#" role="button">Start the demo</button>
         
         <h4>Orientation</h4>
         <ul>
