--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         updateFieldIfNotNull('Orientation_a', event.alpha);
         updateFieldIfNotNull('Orientation_b', event.beta);
         updateFieldIfNotNull('Orientation_g', event.gamma);
-      }*/
+      }
 
       function updateFieldIfNotNull(fieldName, value, precision=10){
         if (value != null)
@@ -99,10 +99,8 @@
         updateFieldIfNotNull('Gyroscope_z', event.rotationRate.alpha);
         updateFieldIfNotNull('Gyroscope_x', event.rotationRate.beta);
         updateFieldIfNotNull('Gyroscope_y', event.rotationRate.gamma);
-        incrementEventCount();
-      }
+      }*/
 
-      let is_running = false;
       let demo_button = document.getElementById("start_demo");
       demo_button.onclick = function(e) {
         e.preventDefault();
@@ -115,7 +113,7 @@
           DeviceMotionEvent.requestPermission();
         }
         
-        window.addEventListener("devicemotion", handleMotion);
+        window.addEventListener("devicemotion", mountedApp.handleMotion);
         window.addEventListener("deviceorientation", mountedApp.handleOrientation);
       };
     </script>
