--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       -->
       <div>
         <button id="start_demo" href="#" role="button">Start the demo</button>
-      </div>>
+      </div>
 
     </div>
 
