Why am I here? Just to suffer?

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       -->
       <div v-if="eventNum === 0">
         <button id="start_demo" href="#" role="button">Start the demo</button>
-        <button @click="incrementEventNum">NEXT</button>
+        <button @click="eventNum++">NEXT</button>
         
         <h4>Orientation</h4>
         <ul>
