Why am I here? Just to suffer?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <subtraction></subtraction><br>
         <scwt></scwt><br>
       -->
-      <div v-if="eventNum === 0">
+      <div v-show="eventNum === 0">
         <button id="start_demo" href="#" role="button">Start the demo</button>
         <button @click="eventNum++">NEXT</button>
         
