Why am I here? Just to suffer?

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         }
         
         window.addEventListener("devicemotion", mountedApp.handleMotion);
-        //window.addEventListener("deviceorientation", mountedApp.handleOrientation);
+        window.addEventListener("deviceorientation", mountedApp.handleOrientation);
       };
     </script>
   </body>
