Experimenting with the sensors frequency

--- a/index.html
+++ b/index.html
@@ -97,38 +97,7 @@
         }
         window.addEventListener("deviceorientation", mountedApp.handleOrientation);
         //window.addEventListener("devicemotion", mountedApp.handleMotion);
-        window.addEventListener("devicemotion", function(event) {
-            let lastMove = 0;
-            if(Date.now() - lastMove > 1000) {
-                updateFieldIfNotNull('Accelerometer_gx', event.accelerationIncludingGravity.x);
-                updateFieldIfNotNull('Accelerometer_gy', event.accelerationIncludingGravity.y);
-                updateFieldIfNotNull('Accelerometer_gz', event.accelerationIncludingGravity.z);
-                updateFieldIfNotNull('Accelerometer_x', event.acceleration.x);
-                updateFieldIfNotNull('Accelerometer_y', event.acceleration.y);
-                updateFieldIfNotNull('Accelerometer_z', event.acceleration.z);
-
-                updateFieldIfNotNull('Gyroscope_z', event.rotationRate.alpha);
-                updateFieldIfNotNull('Gyroscope_x', event.rotationRate.beta);
-                updateFieldIfNotNull('Gyroscope_y', event.rotationRate.gamma);
-                
-                updateFieldIfNotNull('Accelerometer_i', event.interval, 2);
-
-                if (event.acceleration.x != null)
-                    this.accels[0] = event.acceleration.x
-                if (event.acceleration.y != null)
-                    this.accels[1] = event.acceleration.y
-                if (event.acceleration.z != null)
-                    this.accels[2] = event.acceleration.z
-
-                if (event.rotationRate.alpha != null)
-                    this.gyros[0] = event.rotationRate.alpha
-                if (event.rotationRate.beta != null)
-                    this.gyros[1] = event.rotationRate.beta
-                if (event.rotationRate.gamma != null)
-                    this.gyros[2] = event.rotationRate.gamma
-                lastMove = Date.now();
-            }
-        });
+        window.addEventListener("devicemotion", mountedApp.handleMotion);
       };
     </script>
   </body>
