Changed the html header to dev branch, in order to make it more obvious when in the dev branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MockApp</title>
+    <title>MockApp-</title>
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app">
-      <header>MockApp Ver. Alpha</header>
+      <header>MockApp Develop Branch</header>
 
       <initial-form v-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
 
