Fixed where the GroundTruth page was pushing the data into wrong spot

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="app">
       <header>MockApp Develop Branch</header>
       <p>Debugger: eventNum = {{ eventNum }}</p>
+      <p>Debugger: runData = {{ runData }}</p>
 
       <div v-if="eventNum === 0">
         <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
