--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <div id="app">
       <header>MockApp Develop Branch</header>
-      <p>Debugger: eventNum = {{ eventNum }}</p>
-      <p>Debugger: runData = {{ runData }}</p>
+      <div v-if="debugMode">
+        <p>Debugger: eventNum = {{ eventNum }}</p>
+        <p>Debugger: runData = {{ runData }}</p>
+      </div>
 
       <div v-if="eventNum === 0">
         <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
         <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Motion Sensor Use</button><br>
-        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="(accels[0] != 0)" @click="eventNum++">Next</button>
+        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="accels[0] != 0 || !debugMode" @click="eventNum++">Next</button>
       </div>
       <initial-form v-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
       <ground-survey v-if="eventNum === 2" @ground-truth-submitted="addGroundTruth"></ground-survey><br>
