--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <div v-if="eventNum === 0">
         <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
         <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Motion Sensor Use</button><br>
-        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="!(accels[0] != 0 || !debugMode)" @click="eventNum++">Next</button>
+        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="accels[0] == 0 || debugMode" @click="eventNum++">Next</button><br>
+        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" v-if="debugMode" @click="eventNum++">Force Next</button>
+
       </div>
       <initial-form v-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
       <ground-survey v-if="eventNum === 2" @ground-truth-submitted="addGroundTruth"></ground-survey><br>
