--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
         <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Motion Sensor Use</button><br>
         <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="accels[0]+accels[1]+accels[2]+gyros[0]+gyros[1]+gyros[2] == 0" @click="eventNum++">Next</button><br>
-        <button style="font-size: 2rem; margin: 1rem 0 0 1rem;" v-if="debugMode" @click="eventNum++">Force Next</button>
+        <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" v-if="debugMode" @click="eventNum++">Force Next</button>
 
       </div>
-      <initial-form v-if="eventNum === 1" @initial-form-submitted="addInitialForm"></initial-form><br>
-      <ground-survey v-if="eventNum === 2" @ground-truth-submitted="addGroundTruth"></ground-survey><br>
+      <initial-form v-if="eventNum === 1" @initial-form-submitted="addInitialForm" :debug-mode="debugMode"></initial-form><br>
+      <ground-survey v-if="eventNum === 2" @ground-truth-submitted="addGroundTruth" :debug-mode="debugMode"></ground-survey><br>
 
       <!--
         <ground-survey></ground-survey><br>
