--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div v-if="eventNum === 0">
         <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
         <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Motion Sensor Use</button><br>
-        <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="accels[0]+accels[1]+accels[2]+gyros[0]+gyros[1]+gyros[2] == 0" @click="eventNum++">Next</button><br>
+        <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="(accels.x+accels.y+accels.z+gyros.x+gyros.y+gyros.z) == 0" @click="eventNum++">Next</button><br>
         <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" v-if="debugMode" @click="eventNum++">Force Next</button>
 
       </div>
@@ -29,8 +29,18 @@
         <scwt></scwt><br>
       -->
       <div v-if="debugMode">
-        <p>Debugger: eventNum = {{ eventNum }}</p>
-        <p>Debugger: runData = {{ runData }}</p>
+        <ul>Debugger:
+          <li>eventNum = {{ eventNum }}</li>
+          <li>runData:
+            <ul>
+              <li>subjectInfo: {{ runData.subjectInfo }}</li>
+              <li>groundTruth1: {{ runData.groundTruth1 }}</li>
+              <li>groundTruth2: {{ runData.groundTruth2 }}</li>
+              <li>record1: {{ runData.record1 }}</li>
+              <li>record2: {{ runData.record2 }}</li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
     <!-- Import App -->
