--- a/index.html
+++ b/index.html
@@ -65,7 +65,21 @@
         if (DeviceMotionEvent && typeof DeviceMotionEvent.requestPermission === "function") {
           DeviceMotionEvent.requestPermission();
         }
-        window.addEventListener("devicemotion", mountedApp.handleMotion);
+        window.addEventListener("devicemotion", function(event) {
+            if (event.acceleration.x != null)
+              mountedApp.accels.x = event.acceleration.x.toFixed(10)
+            if (event.acceleration.y != null)
+              mountedApp.accels.y = event.acceleration.y.toFixed(10)
+            if (event.acceleration.z != null)
+              mountedApp.accels.z = event.acceleration.z.toFixed(10)
+
+            if (event.rotationRate.alpha != null)
+              mountedApp.gyros.x = event.rotationRate.alpha.toFixed(10)
+            if (event.rotationRate.beta != null)
+              mountedApp.gyros.y = event.rotationRate.beta.toFixed(10)
+            if (event.rotationRate.gamma != null)
+              mountedApp.gyros.z = event.rotationRate.gamma.toFixed(10)
+        });
       };
     </script>
   </body>
