--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <next-screen v-else-if="eventNum === 6" @skip="skip"></next-screen>
       <scwt v-else-if="eventNum === 7" :debug-mode="debugMode" @skip="skip"></scwt>
       <next-screen v-else-if="eventNum === 8" @skip="skip"></next-screen>
-      
+      <lorem-ipsum v-else-if="eventNum === 9" @sensors-data-submitted="addSensorsData" @touch="updateTouch" @del-key="updateDel" @skip="skip" :debug-mode="debugMode" :accels="accels" :gyros="gyros" :touch-num="touchNum" :del-num="delNum" :event-num="eventNum"></lorem-ipsum>
+      <next-screen v-else-if="eventNum === 10" @skip="skip"></next-screen>
+      <ground-survey v-else-if="eventNum === 11" @ground-truth-submitted="addGroundTruth" @touch="updateTouch" :debug-mode="debugMode"></ground-survey>
+      <div v-else-if="eventNum === 12"><h1>The End of Data Collection</h1><br> Thank you for your participation!</div>
 
       <!--
         <lorem-ipsum v-else-if="eventNum === 5" @sensors-data-submitted="addSensorsData" @touch="updateTouch" @del-key="updateDel" @skip="skip" :debug-mode="debugMode" :accels="accels" :gyros="gyros" :touch-num="touchNum" :del-num="delNum" :event-num="eventNum"></lorem-ipsum>
